2017-03-16

        * Version 1.3.0 released
        =========================

        GWcs now supports CD keywords instead of CDELT (#1951)
        Add GLS and SFL WCS projections (#1851)
        GModelSpectralNodes throws exception for non-positive energy or intensity (#990)


2017-02-24

        * Version 1.2.0 released
        =========================

        Reduce length of LAT response filenames by unzipping a number of energy dispersion files (#1931)
        Skip zero livetime observations in stacked cubes for CTA (#1920)
        Correct handling of time references in GGti::extend() method (#1922)
        Check that MC energy is comprised in validity range for CTA 3D background template (#1918)
        Add GModelTemporalPhaseCurve class (#1916)
        Monte Carlo for empty maps or map cubes no longer throws an exception (#1915)
        Add GModelTemporalLightCurve class (#1914)
        Add GSkyMap FITS HDU constructor
        Add leap second for 1-1-2017 (#1887)
        Add region() method to GModelSpatial (#1764)
        Correct containment radius computation in GCTAPsf2D::containment_radius (#1876)
        Add composite spatial and spectral models (#1706)
        Add GObservations::save_covmat() method (#1863)
        Add GFft and GFftWavetable classes (#1731)
        Add GNdarray class (#1768)
        Increase precision of gammalib::str() floating point functions
        Add GFits::publish() methods (#1231)
        Add GVOTable class (#1231)
        Add multiplicative spectral model (#1861)
        Add additional time setting and getting methods (#1856)
        Check CTA response table dimension for consistency (#1848)
        Remove eval_gradients() methods and remplace by eval() method with optional gradients argument (#1847)
        Add GTestSuite::test_value() method with automatic precision computation
        Add GSkyMap::is_empty() method (#1828)
        Add GApplication access by index operator (#1838)